--- a/inst/iskay/www/help_text/kruskal_help.rmd
+++ b/inst/iskay/www/help_text/kruskal_help.rmd
@@ -1,5 +1,10 @@
+### Definition
+
 The Kruskal-Wallis test is often used as an alternative to the ANOVA where the assumption of normality is not acceptable. It is used to test if k samples (k>2) come from the same population or populations with identical properties as regards a position parameter (the position parameter is conceptually close to the median, but the Kruskal-Wallis test takes into account more information than just the position given by the median).
 
 This nonparametric test is to be used when you have k independent samples, in order to determine if the samples come from a single population or if at least one sample comes from a different population than the others.
+
+
+### References
 
 `W.J. Conover, 1999`. Practical Nonparametrics Statistics.
